testsuite/tests/typecheck/should_fail/T3323.stderr
T3323.hs:18:7: error: [GHC-39999]
    • Could not deduce ‘GHC.Internal.IO.Device.RawIO dev0’
        arising from a record update
      from the context: (GHC.Internal.IO.Device.RawIO dev,
                         GHC.Internal.IO.Device.IODevice dev,
                         GHC.Internal.IO.BufferedIO.BufferedIO dev,
                         ghc-internal-9.1300.0:GHC.Internal.Data.Typeable.Internal.Typeable
                           dev)
        bound by a pattern with constructor:
                   Handle__ :: forall dev enc_state dec_state.
                               (GHC.Internal.IO.Device.RawIO dev,
                                GHC.Internal.IO.Device.IODevice dev,
                                GHC.Internal.IO.BufferedIO.BufferedIO dev,
                                ghc-internal-9.1300.0:GHC.Internal.Data.Typeable.Internal.Typeable
                                  dev) =>
                               dev
                               -> HandleType
                               -> GHC.Internal.IORef.IORef
                                    (GHC.Internal.IO.Buffer.Buffer GHC.Internal.Word.Word8)
                               -> BufferMode
                               -> GHC.Internal.IORef.IORef
                                    (dec_state,
                                     GHC.Internal.IO.Buffer.Buffer GHC.Internal.Word.Word8)
                               -> GHC.Internal.IORef.IORef
                                    (GHC.Internal.IO.Buffer.Buffer
                                       GHC.Internal.IO.Buffer.CharBufElem)
                               -> GHC.Internal.IORef.IORef
                                    (BufferList GHC.Internal.IO.Buffer.CharBufElem)
                               -> Maybe (GHC.Internal.IO.Encoding.Types.TextEncoder enc_state)
                               -> Maybe (GHC.Internal.IO.Encoding.Types.TextDecoder dec_state)
                               -> Maybe GHC.Internal.IO.Encoding.Types.TextEncoding
                               -> Newline
                               -> Newline
                               -> Maybe (GHC.Internal.MVar.MVar Handle__)
                               -> Handle__,
                 in a record update
        at T3323.hs:18:7-28
      The type variable ‘dev0’ is ambiguous
    • In a record update at field ‘haDevice’,
      with type constructor ‘Handle__’,
      data constructor ‘Handle__’
      and existential variables ‘dev’, ‘enc_state’, ‘dec_state’.
      In the expression: h {haDevice = undefined}
      In an equation for ‘f’: f h = h {haDevice = undefined}

